--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "rehype-highlight": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
