--- a/public/admin/cms/config.yml
+++ b/public/admin/cms/config.yml
@@ -18,4 +18,5 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Date", name: "date", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false }
       - { label: "Author", name: "author", widget: "string" }
+      - { label: "Cover Image", name: "image", widget: "image", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
