--- a/public/admin/cms/config.yml
+++ b/public/admin/cms/config.yml
@@ -11,7 +11,7 @@ collections:
     label: "Articles"
     folder: "content/articles"
     create: true
-    slug: "{{slug}}"
+    slug: "{{year}}-{{month}}-{{day}}-{{hour}}{{minute}}{{second}}"
     extension: "md"
     format: "frontmatter"
     fields:
