--- a/public/admin/cms/config.yml
+++ b/public/admin/cms/config.yml
@@ -19,6 +19,18 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Date", name: "date", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false }
       - { label: "Author", name: "author", widget: "string" }
+      - label: "Tags"
+        name: "tags"
+        widget: "list"
+        required: true
+        min: 1
+        field: { label: "Tag", name: "tag", widget: "string" }
+      - label: "Keywords"
+        name: "keywords"
+        widget: "list"
+        required: true
+        min: 1
+        field: { label: "Keyword", name: "keyword", widget: "string" }
       - { label: "Summary", name: "summary", widget: "text", required: false }
       - { label: "Cover Image", name: "image", widget: "image", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
