--- a/public/admin/cms/config.yml
+++ b/public/admin/cms/config.yml
@@ -3,6 +3,7 @@
   repo: "kirubaisathiyam-dev/kirubaisathiyam"
   branch: "main"
   auth_type: implicit
+  app_id: Ov23liUveATlqLvpISjv
 
 media_folder: "public/uploads"
 public_folder: "/uploads"
