--- a/public/admin/cms/config.yml
+++ b/public/admin/cms/config.yml
@@ -2,7 +2,7 @@
   name: github
   repo: "kirubaisathiyam-dev/kirubaisathiyam"
   branch: "main"
-  site_domain: "fb8ea160-3f8b-4243-8b4e-981d1679dc74"
+  auth_type: implicit
 
 media_folder: "public/uploads"
 public_folder: "/uploads"
