--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,7 +15,11 @@
       "purpose": "maskable"
     }
   ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "display": "standalone"
+  "theme_color": "#000000",
+  "background_color": "#000000",
+  "display": "standalone",
+  "start_url": "/",
+  "scope": "/",
+  "id": "/",
+  "description": "Tamil Christian articles and the Tamil Holy Bible reader with study notes."
 }
